Change title for winner and title too big fix

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 h1 {
     margin: 30px;
     font-family: cursive;
-    font-size: 8em;
+    font-size: 6.5em;
     color: #4ECCA3;
 }
 
